fix layout issues

--- a/polymorphia-frontend/components/main-layout/index.css
+++ b/polymorphia-frontend/components/main-layout/index.css
@@ -2,7 +2,7 @@
 @import "../../styles/globals.css";
 
 .main-layout {
-  @apply w-full h-full flex flex-col min-h-[calc(100dvh)] relative overflow-hidden lg:pr-24;
+  @apply w-full h-full flex flex-col min-h-[calc(100dvh)] relative overflow-hidden;
 }
 
 body:has([data-speed-dial-portal="true"]) #main-container {
@@ -18,5 +18,6 @@ body:has([data-speed-dial-portal="true"]) #main-container {
 }
 
 .main-layout-content-wrapper {
-  @apply w-full h-full flex flex-col flex-1 max-lg:mt-20 relative overflow-hidden;
+  @apply w-full h-full flex flex-col flex-1 max-lg:mt-20 relative overflow-y-auto custom-scrollbar lg:pr-24;
+  scrollbar-gutter: stable both;
 }
